<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/product_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/product_price"
            android:inputType="number"/>

        <TextView
            android:id="@+id/current_quantity"
            style="@style/EditorFieldStyle"
            android:paddingTop="@dimen/padding_list_view"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/current_quantity" />

        <LinearLayout
            style="@style/EditorLinearLayout">

            <ImageButton
                android:id="@+id/minus"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/minus_one"
                android:onClick="decreaseQuantity"
                android:src="@drawable/minus" />

            <TextView
                android:id="@+id/quantity"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/layout_margin_minor"
                android:paddingRight="@dimen/layout_margin_minor"
                android:text="@string/zero"
                android:textSize="@dimen/quantity_text_size" />

            <ImageButton
                android:id="@+id/plus"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/plus_one"
                android:onClick="increaseQuantity"
                android:src="@drawable/plus" />

        </LinearLayout>

        <LinearLayout
            style="@style/EditorLinearLayout">

        <TextView
            android:id="@+id/add_photo_text"
            style="@style/EditorBoldText"
            android:text="@string/add_a_photo" />

            <ImageButton
                android:id="@+id/add_photo"
                style="@style/GeneralCenterWrap"
                android:contentDescription="@string/camera_icon"
                android:onClick="addPhoto"
                android:src="@drawable/add_photo" />

        </LinearLayout>

        <LinearLayout
            style="@style/EditorLinearLayout">

        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/place_order_image"
            android:onClick="createEmail"
            android:src="@drawable/place_order" />

            <TextView
                android:id="@+id/order_inventory"
                style="@style/EditorBoldText"
                android:text="@string/place_order" />

        </LinearLayout>

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:padding="@dimen/padding_general"
            android:contentDescription="@string/image_of_product"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

</ScrollView>